Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
 
 <p>Written by <a href="http://trenthauck.com">Trent Hauck</a>.</p>
 
+<h1>Videos</h1>
+
+<h2>Create A Project</h2>
+
+<p><a href="http://www.youtube.com/embed/izBnfILEeIE">Create Project Video</a></p>
+
+<p>Hi</p>
+
+
+
 <p>Provides utilities and functions for managing data projects in python.  Requires
 use of IPython and Pandas.</p>
 
