Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
 
 <h1>Videos</h1>
 
-<h2>Create A Project</h2>
-
 <p><a href="http://www.youtube.com/embed/izBnfILEeIE">Create Project Video</a></p>
 
-<p>Hi</p>
+<p><a href="http://www.youtube.com/embed/YWRJ-l8PZaA">Load Project Video</a></p>
 
-
+<h1>General</h1>
 
 <p>Provides utilities and functions for managing data projects in python.  Requires
 use of IPython and Pandas.</p>
